2004-12-05  Sam Steingold  <sds@gnu.org>

	* net/tramp.el (tramp-handle-file-accessible-directory-p): Fixed
	`tramp-time-diff' comparison logic

2004-12-05  Paul Pogonyshev  <pogonyshev@gmx.net>

	* progmodes/which-func.el (which-function): Use
	`run-hook-with-args-until-success' instead of a custom loop.
	Fixes bug with local hooks.

2004-12-05  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-font-lock-url-regexp):
	Use delete-dups when calculating the initial value.
	(bibtex-autokey-get-title): Use <=.
	(bibtex-goto-line): New function.
	(bibtex-reposition-window): Use line numbers instead of point
	positions.  Use window-body-height.
	(bibtex-find-crossref): Use bibtex-reposition-window.
	(bibtex-find-entry): Use bibtex-reposition-window.  Always return
	position of entry if key is found or nil if not found.

2004-12-05  Richard M. Stallman  <rms@gnu.org>

	* cus-edit.el (custom-file): Doc fix.

	* progmodes/sh-script.el (sh-indent-for-then): Change default.

2004-12-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* wid-edit.el (widget-specify-field): Add `real-field' property to
	boundary.
	(widget-field-at): Use it.

2004-12-02  Richard M. Stallman  <rms@gnu.org>

	* progmodes/cc-mode.el (awk-mode autoload):
	Supply t meaning interactive function.

	* isearch.el (search-whitespace-regexp): Remove the group.  Doc fix.
	(isearch-mode-map): No special definition for space.
	(isearch-whitespace-chars): Command deleted.
	(isearch-forward-regexp): Doc fix.
	(isearch-quote-char): When a space is not inside brackets,
	use `[ ]' instead of just space.
	(isearch-lazy-highlight-search): Bind search-spaces-regexp.

	* imenu.el (imenu--generic-function): Delete code to exclude
	matches in comments.

	* man.el (Man-reverse-face): Change default to `highlight'.

	* replace.el (occur-1): Specify t for KEEP-PROPS to occur-engine.
	(occur-engine): Use `face' prop rather than `font-lock-face'
	when specifying use of `match-face'.